# wp

./: .gitignore  Cargo.toml  Konnagar.txt  readme.md  test.txt
scripts/: build.ps1  build.sh  download.py  downloader.py  link_scraper.py  requirements.txt
src/: core.rs  main.rs  scraper.rs  utils.rs
