[package]
name = "wp"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0.115"
url = "2.5.2"
