[package]
name = "wp"
license = "GPLv3"
version = "0.1.4"
description = "Wikipedia tools on your terminal."
edition = "2021"
authors = ["Aniruddha Mukherjee <amkhrjee@gmail.com>"]
readme = "readme.md"
repository = "https://github.com/amkhrjee/wp"
keywords = ["wikipedia", "download", "data", "tui", "cli"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.27.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0.115"
url = "2.5.2"
