[package]
name = "wp"
license = "GPLv3"
version = "0.1.6"
description = "Wikipedia tools on your terminal."
edition = "2021"
authors = ["Aniruddha Mukherjee <amkhrjee@gmail.com>"]
readme = "readme.md"
repository = "https://github.com/amkhrjee/wp"
keywords = ["wikipedia", "download", "data", "tui", "cli"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
indicatif = "0.17.8"
regex = "1.10.6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.20.0"
serde_json = "1.0.115"
url = "2.5.2"
zip = "2.2.0"
